增加2048和水果消消乐

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,8 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <!-- 指定启动类 -->
+                    <mainClass>com.example.game.GameApplication</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
